--- a/UI/user-accounts.html
+++ b/UI/user-accounts.html
@@ -155,6 +155,14 @@
           </div>
         </div>
       </div>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Are you sure you want to deactivate the account? This can be undone later by toggling the switch</p>
+          <button id="confirm" class="submit-btn danger">Deactivate</button>
+          <button id="cancel" class="submit-btn">Cancel</button>
+        </div>
+      </div>
       <footer>
         <p>Copyright &copy; banka 2019</p>
       </footer>
