--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -26,9 +26,9 @@
       <div class="page-body profile">
         <div class="profile-header">
           <div id="user-photo">
-              <img src="https://i.ibb.co/pQJwjvd/user-profile.jpg">
+              <img src="https://via.placeholder.com/200/474973/a69cac">
           </div>
-          <h2 id="user-name">Mr. Kelechi M. Ngwobia</h2>
+          <h2 id="user-name"></h2>
           <div class="tab">
             <button id="profile" class="tablinks" onclick="displayInfo(event, 'profile-tab')">Profile</button>
             <button class="tablinks" onclick="displayInfo(event, 'transaction-tab')">Transactions</button>
@@ -39,19 +39,19 @@
             <table class="center profile-table">
               <tr>
                 <td>BVN</td>
-                <td>3120123456</td> 
+                <td>***********</td> 
               </tr>
               <tr>
                 <td>Email</td>
-                <td>kcmykairl@gmail.com</td> 
+                <td id="user-email"></td> 
               </tr>
               <tr>
                 <td>Phone</td>
-                <td>08112345678</td> 
+                <td>edit profile to add phone number</td> 
               </tr>
               <tr>
                 <td>Address</td>
-                <td>Old leg. qtrs. Jos, Plateau State</td> 
+                <td>edit profile to add address</td> 
               </tr>
             </table>
             <div class="edit">
@@ -170,6 +170,7 @@
       </footer>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/userDashboard.js"></script>
     <script src="js/createAccount.js"></script>
     <script src="js/editProfile.js"></script>
   </body>
