feat(create account): implement create bank account
- work on create acocunt modal to create a new account for the user

[Delivers #165804214]

--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -30,19 +30,19 @@
             <h2 class="form-title" >Sign in</h2>
           <br/><br/>
           <div class="log-in">
-              <div class="errors">
-                  <ul>
-                      
-                  </ul>
-              </div>
+            <div class="errors">
+                <ul>
+                    
+                </ul>
+            </div>
             <form id="signin" action="" method="POST">
               <div class="form-segment">
                 <div class="form-label"><label>Email</label></div>
-                <input id="email" class="form-input" type="email" name="email" placeholder="Enter your email">
+                <input id="email" class="form-input" required type="email" name="email" placeholder="Enter your email">
               </div>
               <div class="form-segment">
                 <div class="form-label"><label>Password</label></div>
-                <input id="password" class="form-input" type="password" name="password" placeholder="Enter your password">
+                <input id="password" class="form-input" required type="password" name="password" placeholder="Enter your password">
               </div>
             <button class="submit-btn" type="submit" name="sign-in">Sign in</button>
             </form>
