--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -38,19 +38,19 @@
             <form id="signup" action="" method="POST">
               <div class="form-segment">
                 <div class="form-label"><label>Firstname</label></div>
-                <input id="firstname" class="form-input" type="text" name="firstame" placeholder="enter your firstname">
+                <input id="firstname" class="form-input" required type="text" name="firstame" placeholder="enter your firstname">
               </div>
               <div class="form-segment">
                 <div class="form-label"><label>Lastname</label></div>
-                <input id="lastname" class="form-input" type="text" name="lastname" placeholder="enter your Lastname">
+                <input id="lastname" class="form-input" required type="text" name="lastname" placeholder="enter your Lastname">
               </div>
               <div class="form-segment">
                 <div class="form-label"><label>Email</label></div>
-                <input id="email" class="form-input" type="email" name="email" placeholder="enter your email">
+                <input id="email" class="form-input" required type="email" name="email" placeholder="enter your email">
               </div>
               <div class="form-segment">
                 <div class="form-label"><label>Password</label></div>
-                <input id="password" class="form-input" type="password" name="password" placeholder="enter your password">
+                <input id="password" class="form-input" required type="password" name="password" placeholder="enter your password">
               </div>
               <button class="submit-btn" type="submit" name="sign-up">Sign up</button>
             </form>
