feat(get accounts): get all user accounts
- work on the GET /user/accounts endpoint to fetch all accounts owned by the user
- fetch the endpoint to display all user accounts on the user's dashboard

[Delivers #165819853]

--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -91,29 +91,9 @@
               <td>12:18pm</td>
             </tr>
           </table>
-        </div>
-        
+        </div>   
         <div id="account-tab" class="tabcontent">
-          <div class="account-item">
-            <div class="acct">
-              <span class="item-label">Savings Account:</span>
-              <span class="item-content">0023521878</span>
-            </div>
-            <div class="acct bal">
-              <span class="item-label">Account Balance:</span>
-              <span class="item-content">NGN 125,000.47</span>
-            </div>
-          </div>
-          <div class="account-item">
-            <div class="acct">
-              <span class="item-label">Current Account:</span>
-              <span class="item-content">0485219648</span>
-            </div>
-            <div class="acct bal">
-              <span class="item-label">Account Balance:</span>
-              <span class="item-content">NGN 258,000.52</span>
-            </div>
-          </div>
+          <div id=account-content></div>
           <div class="create">
             <button id="create">&plus;</button>
           </div>
